--- a/corbal-react-app/src/components/css/userCard.css
+++ b/corbal-react-app/src/components/css/userCard.css
@@ -3,6 +3,7 @@
   width: 1486px;
   background-color: rgb(190, 190, 190);
   margin-top: 50px;
+  margin-left: 30px;
   border-radius: 10px;
   display: grid;
 }
