--- a/corbal-react-app/src/components/css/Artist_page.css
+++ b/corbal-react-app/src/components/css/Artist_page.css
@@ -5,5 +5,22 @@
 .app-container {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
 }
 
+.main-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 3;
+  background-color: var(--background-color);
+}
+
+.header-container {
+}
+
+.body-container {
+}
