--- a/corbal-react-app/src/components/css/userCard.css
+++ b/corbal-react-app/src/components/css/userCard.css
@@ -1,19 +1,75 @@
+@import "color_pallette.css";
+
 .UserCard {
-  height: 299px;
-  width: 1486px;
-  background-color: rgb(190, 190, 190);
-  margin-top: 50px;
-  margin-left: 30px;
-  border-radius: 10px;
-  display: grid;
+  height: 300px;
+  width: 95%;
+  background-color: var(--header-color);
+  margin: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 1rem;
+}
+
+.profile-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.pitch-wrapper {
+  width: 30%;
+  height: 100%;
+  display: flex;
+}
+
+.pitch-container {
+  width: 40%;
+  height: 50%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  background: #ffffff;
+  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+}
+
+.pitch-title {
+  margin-left: auto;
+  margin-right: auto;
+  /* height: 30%; */
+  margin-top: 10px;
+  margin-bottom: 0px;
+
+  /* font-family: "Heebo"; */
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  /* line-height: 22px; */
+}
+.pitch-button-container {
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 40%;
+  margin: 10px auto;
+  outline: 1px solid rgb(67, 67, 67);
+  display: flex;
+  border-radius: 0.5rem;
+}
+
+.pitch-button-container > p {
+  font-size: 60px;
+  font-weight: lighter;
 }
 
 .pfp-container {
   background-color: rgb(255, 253, 253);
   width: 212px;
   height: 212px;
-  margin-top: 43px;
   margin-left: 69px;
+  margin-right: 50px;
   border-radius: 50%;
   display: inline-block;
 }
@@ -26,20 +82,16 @@ img {
 }
 
 .username {
-  margin-left: 200px;
-  margin-top: 40px;
+  align-items: top;
+  margin-bottom: 30px;
   font-size: 50px;
 }
 
 .real-name-age {
-  margin-left: 200px;
-  margin-top: 18px;
   font-size: 18px;
 }
 
 .user-detail {
-  margin-left: 200px;
-  margin-top: 6px;
   font-size: 14px;
   font-weight: lighter;
 }
