--- a/corbal-react-app/src/components/css/yourBids.css
+++ b/corbal-react-app/src/components/css/yourBids.css
@@ -1,11 +1,29 @@
 .YourBids {
   margin-left: 30px;
   margin-top: 20px;
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
 }
 
 .your-bids-text {
   font-size: 30px;
   font-weight: bold;
+}
+
+.your-bids-wrapper{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+  gap:20px;
+}
+
+.bid-info{
+  display:flex;
+  flex-direction: row;
+  flex-grow:2;
+  justify-content:space-around;
 }
 
 .bids-divider {
@@ -16,19 +34,20 @@
   margin-bottom: 20px;
 }
 
-.view-all-button {
-  background-color: rgb(0, 0, 0);
+/* .view-all-button {
+
   list-style-type: none;
   width: 120px;
   height: 23px;
-  margin-bottom: 50px;
-  border-radius: 10px;
+
   color: white;
   font-size: 12px;
-  border: 3px solid black;
   margin-top: 12px;
-  margin-left: -150px;
   text-align:center;
+} */
+
+.view-all-button{
+  margin:auto 0px;
 }
 
 .bid-analytics {
@@ -44,14 +63,13 @@
   font-size: 22px;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  color: inherit;
+  display:inline-block;
   color: white;
   font-size: 12px;
-  border: 3px solid black;
+  background-color: rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 0.5rem 1.5rem;
+  margin:auto 0px;
 }
 
 
