--- a/corbal-react-app/src/components/css/Artist_page.css
+++ b/corbal-react-app/src/components/css/Artist_page.css
@@ -28,6 +28,7 @@
 .body-container {
   display:flex;
   flex-direction: row;
+  justify-content:space-evenly;
 }
 
 .bid-section {
@@ -47,4 +48,6 @@
   display: flex;
   flex-direction: column;
   flex-grow:1;
+  margin-right: 30px;
+  border-radius: 1rem;
 }
