--- a/corbal-react-app/src/components/css/login.css
+++ b/corbal-react-app/src/components/css/login.css
@@ -4,7 +4,6 @@
   justify-content: center;
   height: 100vh;
   align-items: center;
-  font-family: "Inter";
 }
 
 .login_form {
@@ -26,7 +25,6 @@
   margin-bottom: 10px;
   outline: none;
   border: 1px solid rgba(0, 0, 0, 0.24);
-  font-family: "Inter";
   border-radius: 2px;
   font-size: 15px;
 }
@@ -38,6 +36,11 @@
   border: none;
   color: white;
   font-size: 14px;
-  font-family: "Inter";
   border-radius: 3px;
+}
+
+.error_msg {
+  color: red;
+  align-self: center;
+  justify-self: center;
 }
