--- a/corbal-react-app/src/components/css/Artist_page.css
+++ b/corbal-react-app/src/components/css/Artist_page.css
@@ -13,6 +13,10 @@
   /* justify-content: space-between; */
 }
 
+.sideBar-container{
+  flex-basis: 60px;
+}
+
 .main-container {
   width: 100%;
   height: 100vh;
