--- a/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
@@ -1,7 +1,28 @@
 .card {
-    margin: 0rem auto 1rem auto;
+    margin: 1rem;
     border-radius: 0.5rem;
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 1rem 1rem 1rem 1rem;
+    height:300px;
+    width:250px;
+    position:relative;
+  }
+
+  .cardImage{
+    position: relative;
+  }
+
+  .playButton{
+    position: absolute;
+    bottom:2px;
+    right:2px;
+    border:none;
+    border-radius:0.5rem;
+  }
+
+  .duration{
+    font-size: x-small;
+    position: relative;
+    left:175px;
   }
