--- a/corbal-react-app/src/components/css/ArtistFeedTracksPage.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedTracksPage.module.css
@@ -1,6 +1,7 @@
 .artistFeedTracksContainer{
     display:flex;
     flex-direction: row;
+    height:100vh;
 }
 
 .sideBarContainer{
@@ -13,8 +14,15 @@
     display:flex;
     flex-direction: column;
     flex:3;
+    background-color: var(--background-color);
+
 }
 
 .ml_1 {
     margin-left: 1rem;
+}
+
+.my_1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
