--- a/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
@@ -15,3 +15,16 @@
     flex-direction: column;
     flex: 3;
 }
+
+.ml_1 {
+    margin-left: 1rem;
+}
+
+.my_1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.offersContainer{
+    overflow:scroll;
+}
