--- a/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
@@ -14,6 +14,7 @@
     display:flex;
     flex-direction: column;
     flex: 3;
+    background-color: var(--background-color);
 }
 
 .ml_1 {
@@ -27,4 +28,11 @@
 
 .offersContainer{
     overflow:scroll;
+}
+
+.divider{
+    height:1px;
+    background-color: #C4C4C4;
+    width: 75%;
+    margin-left:1rem;
 }
