--- a/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
@@ -4,13 +4,19 @@
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 1rem 1rem 1rem 1rem;
-    height:300px;
-    width:250px;
+    height:250px;
+    width:210px;
     position:relative;
   }
 
   .cardImage{
     position: relative;
+    text-align: center;
+  }
+
+  .image{
+    width: 150px;
+    height: 150px;
   }
 
   .playButton{
@@ -24,5 +30,9 @@
   .duration{
     font-size: x-small;
     position: relative;
-    left:175px;
+    left:135px;
+  }
+
+  .trackName{
+    font-size: 0.8rem;
   }
