--- a/corbal-react-app/src/components/css/ArtistFeedOffersComponent.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOffersComponent.module.css
@@ -4,3 +4,20 @@
     flex-wrap:wrap;
     gap:1rem;
 }
+
+.divider{
+    height:1px;
+    background-color: #C4C4C4;
+    width: 75%;
+    margin-left:1rem;
+}
+
+.ml_1 {
+    margin-left: 1rem;
+}
+
+.title{
+    display:flex;
+    justify-content: space-between;
+    width:75%;
+}
