--- a/corbal-react-app/src/components/css/color_pallette.css
+++ b/corbal-react-app/src/components/css/color_pallette.css
@@ -2,4 +2,5 @@
   --main-color: rgb(255, 124, 24);
   --background-color: rgb(227, 227, 227);
   --header-color: rgb(255, 255, 255);
+  --secondary-color: #4A4AFC
 }
