--- a/corbal-react-app/src/components/css/Artist_page.css
+++ b/corbal-react-app/src/components/css/Artist_page.css
@@ -14,7 +14,7 @@
 }
 
 .sideBar-container{
-  flex-basis: 60px;
+  flex-basis: 80px;
 }
 
 .main-container {
@@ -23,10 +23,11 @@
   display: flex;
   flex-direction: column;
   flex: 3;
-  background-color: var(--background-color);
+  background-image: url('../../../assets/user_page.background_light.png')
 }
 
 .header-container {
+  
 }
 
 .body-container {
