--- a/corbal-react-app/src/components/css/yourBids.css
+++ b/corbal-react-app/src/components/css/yourBids.css
@@ -9,6 +9,7 @@
 .your-bids-text {
   font-size: 30px;
   font-weight: bold;
+  color: white;
 }
 
 .your-bids-wrapper{
@@ -48,6 +49,7 @@
   font-size: 16px;
   margin-top: 10px;
   margin-left: 10px;
+  color: white;
 }
 
 .view-all-link,
