--- a/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
@@ -36,3 +36,9 @@
     width: 75%;
     margin-left:1rem;
 }
+
+.artistFeedOfferWrapper{
+    display: flex;
+    flex-direction: row;
+    flex: 3;
+}
