--- a/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOffersPage.module.css
@@ -14,7 +14,9 @@
     display:flex;
     flex-direction: column;
     flex: 3;
-    background-color: var(--background-color);
+    /* background-color: var(--background-color); */
+    background-image: url('../../assets/user_page.background_light.png')
+
 }
 
 .ml_1 {
