--- a/corbal-react-app/src/components/css/ArtistRespondBidFormComponent.module.css
+++ b/corbal-react-app/src/components/css/ArtistRespondBidFormComponent.module.css
@@ -2,6 +2,8 @@
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    background-image: url('../../assets/user_page.background_light.png');
+    color: white;
 }
 
 .divider {
@@ -11,9 +13,9 @@
 
 .bidDetailContainer {
     margin: 1rem 0rem;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 1rem;
     padding: 1rem 1rem;
+    background: rgba(0, 0, 0, 0.2)
 }
 
 .bidInfoRow{
@@ -42,6 +44,7 @@ flex :1;
     margin-top: 2rem;
     border-radius: 2rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.2)
 }
 
 .bidFormTitle {
