--- a/corbal-react-app/src/components/css/Artist_page.module.css
+++ b/corbal-react-app/src/components/css/Artist_page.module.css
@@ -2,22 +2,22 @@
 
 /* For app */
 
-.ml-align{
+.ml_align{
   margin-left: 30px;
 }
 
-.app-container {
+.app_container {
   width: 100vw;
   display: flex;
   flex-direction: row;
   /* justify-content: space-between; */
 }
 
-.sideBar-container{
+.sideBar_container{
   flex-basis: 80px;
 }
 
-.main-container {
+.main_container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -26,35 +26,32 @@
   background-image: url('../../assets/user_page.background_light.png')
 }
 
-.header-container {
-  
-}
 
-.body-container {
+.body_container {
   display:flex;
   flex-direction: row;
   justify-content:space-evenly;
 }
 
-.bid-section {
+.bid_section {
   display: flex;
   flex-direction: column;
   flex-grow : 3;
 }
 
-.bids-divider {
+.bids_divider {
   margin-top: 10px;
   background-color: #C4C4C4;
   height: 1px;
   margin-bottom: 20px;
 }
 
-.bids-container{
-  height: 90%;
+.bids_container{
+  height: 50vh;
   overflow:scroll;
 }
 
-.music-section {
+.music_section {
   display: flex;
   flex-direction: column;
   flex-grow:1;
@@ -62,7 +59,8 @@
   border-radius: 1rem;
 }
 
-.music-container{
-  height: 90%;
+.music_container{
+  height: 50vh;
   overflow:scroll;
 }
+
