--- a/corbal-react-app/src/components/css/BidInfo.module.css
+++ b/corbal-react-app/src/components/css/BidInfo.module.css
@@ -3,15 +3,15 @@
   left: 0px;
   top: 0px;
   border-radius: 10px;
-  /* background-color: rgba(255, 255, 255, 1); */
-  /* background-image : url(/../../assets/BidInfo.svg); */
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 3px 6px 0px rgba(75, 81, 91, 0.5);
+  background: rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 3px 6px 0px rgba(75, 81, 91, 0.5); */
   margin-top: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1rem;
+  color:white;
 }
 
 .trackName{
