--- a/corbal-react-app/src/components/css/curator_page.css
+++ b/corbal-react-app/src/components/css/curator_page.css
@@ -19,7 +19,9 @@
   display: flex;
   flex-direction: column;
   flex: 3;
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
+  background-image: url('../../assets/user_page.background_light.png')
+
 }
 
 .header-container {
