--- a/corbal-react-app/src/components/css/songInfo.css
+++ b/corbal-react-app/src/components/css/songInfo.css
@@ -1,12 +1,13 @@
 .SongInfo {
-  height: 188px;
   left: 0px;
   top: 0px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 1);
+  /* background-color: rgba(255, 255, 255, 1);
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 3px 6px 0px rgba(75, 81, 91, 0.5);
+  box-shadow: 0px 3px 6px 0px rgba(75, 81, 91, 0.5); */
+  background: rgba(0, 0, 0, 0.2);
   margin-top: 16px;
+  color: white;
 }
 
 .song-name {
