--- a/corbal-react-app/src/components/css/userCard.css
+++ b/corbal-react-app/src/components/css/userCard.css
@@ -31,8 +31,9 @@
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  background: #ffffff;
+  background: #28335F;
   box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+  color:white;
 }
 
 .pitch-title {
