--- a/corbal-react-app/src/components/css/CuratorFeedCompletedBidsPage.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedCompletedBidsPage.module.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     flex:3;
     background-color: var(--background-color);
+    background-image: url('../../assets/user_page.background_light.png')
 
 }
 
