--- a/corbal-react-app/src/components/css/CuratorFeedMusicPage.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedMusicPage.module.css
@@ -14,13 +14,15 @@
     display: flex;
     flex-direction: row;
     flex: 3;
+
 }
 
 .curatorFeedMusicMainContainer{
     display:flex;
     flex-direction: column;
     background-color: var(--background-color);
-    flex: 1
+    flex: 1;
+    background-image: url('../../assets/user_page.background_light.png')
 }
 
 .ml_1 {
