--- a/corbal-react-app/src/components/css/sideBar.css
+++ b/corbal-react-app/src/components/css/sideBar.css
@@ -18,11 +18,9 @@
 }
 
 .logo-container {
-  background-color: rgb(255, 253, 253);
-  width: 46px;
-  height: 46px;
-  margin-bottom: 50px;
-  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 2rem;
 }
 
 .line {
