added styling to forms

--- a/corbal-react-app/src/components/css/CuratorFeedMyBidsPage.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedMyBidsPage.module.css
@@ -33,3 +33,9 @@
     width: 75%;
     margin-left:1rem;
 }
+
+.curatorFeedBidsWrapper{
+    display: flex;
+    flex-direction: row;
+    flex: 3;
+}
