--- a/corbal-react-app/src/components/css/CreateBidFormComponent.module.css
+++ b/corbal-react-app/src/components/css/CreateBidFormComponent.module.css
@@ -2,6 +2,12 @@
     padding : 1rem;
     display: flex;
     flex-direction: column;
+    position: relative;
+    background-image: url('../../assets/user_page.background_light.png');
+    color: white;
+    height: 100vh;
+    overflow:scroll;
+    position: relative;
 }
 
 .pitchDetailContainer{
