--- a/corbal-react-app/src/components/css/ArtistFeedOfferCard.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedOfferCard.module.css
@@ -1,8 +1,10 @@
 .card {
     margin: 1rem;
     border-radius: 0.5rem;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.2);
+    color: white;
+    /* background-color: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     padding: 1rem 1rem 1rem 1rem;
     height:250px;
     width:210px;
@@ -38,7 +40,9 @@
     right: 0;
     top: 0;
     font-size:small;
-    background-color: var(--main-color);
+    background: rgba(0, 0, 0, 0.5);
+    color: #FF7C17;
+    /* background-color: var(--main-color); */
     border-radius: 0px 10px;
   }
 
