--- a/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
+++ b/corbal-react-app/src/components/css/ArtistFeedTrackCard.module.css
@@ -1,12 +1,14 @@
 .card {
     margin: 1rem;
     border-radius: 0.5rem;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.2);
+    /* background-color: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     padding: 1rem 1rem 1rem 1rem;
     height:250px;
     width:210px;
     position:relative;
+    color: white;
   }
 
   .cardImage{
