--- a/corbal-react-app/src/components/css/Artist_page.module.css
+++ b/corbal-react-app/src/components/css/Artist_page.module.css
@@ -2,7 +2,7 @@
 
 /* For app */
 
-.ml_align{
+.ml_align {
   margin-left: 30px;
 }
 
@@ -13,13 +13,12 @@
   /* justify-content: space-between; */
 }
 
-.sideBar_container{
+.sideBar_container {
   flex-basis: 80px;
 }
 
 .main_container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   flex: 3;
@@ -28,39 +27,38 @@
 
 
 .body_container {
-  display:flex;
+  display: flex;
   flex-direction: row;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 
 .bid_section {
   display: flex;
   flex-direction: column;
-  flex-grow : 3;
+  flex-grow: 3;
 }
 
-.bids_divider {
+.bid_divider {
   margin-top: 10px;
   background-color: #C4C4C4;
-  height: 1px;
-  margin-bottom: 20px;
+  height: 0px;
+  border: 1px solid rgba(237, 237, 245, 0.5);
 }
 
-.bids_container{
+.bids_container {
   height: 50vh;
-  overflow:scroll;
+  overflow: scroll;
 }
 
 .music_section {
   display: flex;
   flex-direction: column;
-  flex-grow:1;
+  flex-grow: 1;
   margin-right: 30px;
   border-radius: 1rem;
 }
 
-.music_container{
+.music_container {
   height: 50vh;
-  overflow:scroll;
+  overflow: scroll;
 }
-
