--- a/corbal-react-app/src/components/css/CuratorFeedBidCard.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedBidCard.module.css
@@ -1,53 +1,52 @@
 .card {
-    margin: 1rem;
-    border-radius: 0.5rem;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 1rem 1rem 1rem 1rem;
-    height:250px;
-    width:210px;
-    position:relative;
-  }
+  margin: 1rem;
+  border-radius: 0.5rem;
+  background: rgba(0, 0, 0, 0.2);
+  /* background-color: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  padding: 1rem 1rem 1rem 1rem;
+  width: 210px;
+  position: relative;
+  color:white;
+}
 
-  .cardImage{
-    position: relative;
-    text-align: center;
-  }
+.cardImage {
+  position: relative;
+  text-align: center;
+}
 
-  .image{
-    width: 150px;
-    height: 150px;
-  }
+.image {
+  width: 150px;
+  height: 150px;
+}
 
-  .playButton{
-    position: absolute;
-    bottom:2px;
-    right:2px;
-    border:none;
-    border-radius:0.5rem;
-  }
+.playButton {
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  border: none;
+  border-radius: 0.5rem;
+}
 
-  .duration{
-    font-size: x-small;
-    position: relative;
-    left:135px;
-  }
+.duration {
+  font-size: x-small;
+  position: relative;
+  left: 135px;
+}
 
-  .price {
-    position: absolute;
-    right: 0;
-    top: 0;
-    font-size:small;
-    background-color: var(--main-color);
-    border-radius: 0px 10px;
-  }
+.price {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: small;
+  background-color: var(--main-color);
+  border-radius: 0px 10px;
+}
 
-  .trackName{
-    font-size:0.8rem;
-  }
+.trackName {
+  font-size: 0.8rem;
+}
 
-  .offerDetails{
-    font-size:0.6rem;
-  }
-
-  
+.offerDetails {
+  font-size: 0.6rem;
+}
