--- a/corbal-react-app/src/components/css/CuratorFeedMusicPage.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedMusicPage.module.css
@@ -6,7 +6,7 @@
 
 .sideBarContainer{
     height: 100%;
-    flex-basis: 60px;
+    flex-basis: 80px;
     background-color: var(--main-color);
 }
 
@@ -22,7 +22,9 @@
     flex-direction: column;
     background-color: var(--background-color);
     flex: 1;
-    background-image: url('../../assets/user_page.background_light.png')
+    background-image: url('../../assets/user_page.background_light.png');
+    height: 100%;
+    overflow:scroll;
 }
 
 .ml_1 {
