--- a/corbal-react-app/src/components/css/CuratorFeedPitchCard.module.css
+++ b/corbal-react-app/src/components/css/CuratorFeedPitchCard.module.css
@@ -1,10 +1,11 @@
 .card {
     margin: 1rem;
     border-radius: 0.5rem;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.2);
+    color:white;
+    /* background-color: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     padding: 1rem 1rem 1rem 1rem;
-    height:250px;
     width:210px;
     position:relative;
   }
@@ -40,7 +41,7 @@
 
   .btn_create_wrapper{
     text-align: center;
-    margin-top: 3px
+    margin: 3px 0px 10px 0px;
   }
   .btn_create{
     background-color: var(--secondary-color);
