--- a/corbal-react-app/src/components/css/yourMusic.css
+++ b/corbal-react-app/src/components/css/yourMusic.css
@@ -62,7 +62,7 @@
   display:inline-block;
   color: white;
   font-size: 12px;
-  background-color: rgb(0, 0, 0);
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   padding: 0.5rem 1.5rem;
   margin:auto 0px;
