--- a/corbal-react-app/src/components/css/Artist_page.module.css
+++ b/corbal-react-app/src/components/css/Artist_page.module.css
@@ -35,7 +35,7 @@
 .bid_section {
   display: flex;
   flex-direction: column;
-  flex-grow: 3;
+  flex-basis: 50%;
 }
 
 .bid_divider {
@@ -54,6 +54,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  flex-basis: 50%;
   margin-right: 30px;
   border-radius: 1rem;
 }
