--- a/corbal-react-app/src/components/css/CuratorRespondBidFormComponent.module.css
+++ b/corbal-react-app/src/components/css/CuratorRespondBidFormComponent.module.css
@@ -105,3 +105,11 @@ flex :1;
     background-color: var(--secondary-color);
     color: white
 }
+
+.bidFormContainer input{
+    background : #CACDE1;
+    border-radius: 10px;
+    border:0px;
+    outline:0px;
+    padding :0.3rem 0.3rem;
+ }
